--- a/course1/assessment2/part2.html
+++ b/course1/assessment2/part2.html
@@ -8,6 +8,7 @@
     <script>
         var colors = ["gray", "blue", "cyan", "gold", "magenta", "orange", "red", "white", "yellow"];
         var target_index = 0;
+        var target = '';
         var guess_input;
         var count_guesses = 0;
 
