Assessment 3: Finished part 4

--- a/course1/assessment3/part4.html
+++ b/course1/assessment3/part4.html
@@ -112,7 +112,7 @@
         }
 
         /**
-         * Returns an integer in the range [min, max] (including max itself).
+         * Returns an integer in the range [min, max] (including max).
          *
          * @param min
          * @param max
