Use URL instead of local smile image

--- a/course1/assessment3/part2.html
+++ b/course1/assessment3/part2.html
@@ -39,7 +39,7 @@
         function generateFaces() {
             for (var i = 0; i < numberOfFaces; i++) {
                 var img = document.createElement("img");
-                img.src = "smile.png";
+                img.src = "https://home.cse.ust.hk/~rossiter/mooc/matching_game/smile.png";
 
                 var widthRange = divWidth - imageWidth;
                 var heightRange = divHeight - imageHeight;
