--- a/course1/assessment3/part4.html
+++ b/course1/assessment3/part4.html
@@ -53,7 +53,7 @@
 
             for (var i = 0; i < numberOfFaces; i++) {
                 var img = document.createElement("img");
-                img.src = "smile.png";
+                img.src = "https://home.cse.ust.hk/~rossiter/mooc/matching_game/smile.png";
 
                 var widthRange = divWidth - imageWidth;
                 var heightRange = divHeight - imageHeight;
