--- a/course2/week1/examples/conFusion/index.html
+++ b/course2/week1/examples/conFusion/index.html
@@ -36,7 +36,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign"></span> About</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             Menu
@@ -82,6 +82,14 @@
     </header>
 
     <div class="container">
+        <div class="row">
+            <div>
+                <ol class="breadcrumb">
+                    <li class="active">Home</li>
+                </ol>
+            </div>
+        </div>
+
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
