--- a/course2/week1/examples/conFusion/index.html
+++ b/course2/week1/examples/conFusion/index.html
@@ -39,7 +39,7 @@
                     <li><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign"></span> About</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            Menu
+                            <span class="glyphicon glyphicon-list-alt"></span> Menu
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
@@ -53,7 +53,7 @@
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
 
                 <!--<ul class="nav navbar-nav navbar-right">-->
