--- a/course2/week1/examples/conFusion/index.html
+++ b/course2/week1/examples/conFusion/index.html
@@ -54,8 +54,20 @@
                         </ul>
                     </li>
                     <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
+                    <li>
+                        <form class="navbar-form navbar-right" role="form">
+                            <div class="form-group">
+                                <input type="text" name="email" class="form-control" placeholder="Email">
+                                <input type="text" name="password" class="form-control" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <input id="remember-me" type="checkbox" class="form-control" name="rememberme" value="">
+                                <label for="remember-me">Remember me</label>
+                            </div>
+                            <button type="submit" class="btn btn-info">Sign In</button>
+                        </form>
+                    </li>
                 </ul>
-
                 <!--<ul class="nav navbar-nav navbar-right">-->
                     <!--<li><a href="#">Sign In</a></li>-->
                     <!--<li><a href="#">Contact</a></li>-->
@@ -70,7 +82,7 @@
 
         <div class="container">
             <div class="row row-header">
-                <div class="col-xs-12 col-sm-10">
+                <div class="col-xs-12 col-sm-8">
                     <h1>Ristorante con Fusion</h1>
                     <p style="padding:40px;"></p>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
@@ -78,6 +90,9 @@
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:20px;"></p>
                     <img src="img/logo.png" class="img-responsive">
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <a class="btn btn-warning btn-block" href="#reserve-table">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -155,6 +170,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div id="reserve-table" class="row row-content">
         </div>
     </div>
 
