--- a/course2/week1/examples/conFusion/index.html
+++ b/course2/week1/examples/conFusion/index.html
@@ -55,7 +55,7 @@
                     </li>
                     <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                     <li>
-                        <form class="navbar-form navbar-right" role="form">
+                        <form class="navbar-form navbar-left" role="form">
                             <div class="form-group">
                                 <input type="text" name="email" class="form-control" placeholder="Email">
                                 <input type="text" name="password" class="form-control" placeholder="Password">
@@ -139,9 +139,18 @@
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-                <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="media-heading">Weekend Grand Buffet <span class="label label-danger">New</span></h2>
+                        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                        <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+                    </div>
+                    <div class="media-right media-middle">
+                        <a href="#">
+                            <img class="media-object img-thumbnail" src="img/buffet.png" alt="Buffet">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -173,6 +182,73 @@
         </div>
 
         <div id="reserve-table" class="row row-content">
+            <div class="col-xs-12 col-sm-3">
+                <p style="padding:20px;"></p>
+                <h3>Reserve a Table</h3>
+            </div>
+            <div class="col-xs-12 col-sm-9">
+                <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <div class="col-xs-12 col-sm-2">
+                            <label for="num-guests">Number of Guests</label>
+                        </div>
+                        <div class="col-xs-12 col-sm-10">
+                            <label class="radio-inline">
+                                <input type="radio" id="num-guests" name="num-guests" value="1"> 1
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="num-guests" value="2"> 2
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="num-guests" value="3"> 3
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="num-guests" value="4"> 4
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="num-guests" value="5"> 5
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="num-guests" value="6"> 6
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-12 col-sm-2">
+                            <label>Date and Time</label>
+                        </div>
+                        <div class="col-xs-12 col-sm-4">
+                            <label class="sr-only" for="date">Date</label>
+                            <div class="form-group has-feedback">
+                                <input class="form-control" name="date" id="date" placeholder="Date">
+                                <span class="glyphicon glyphicon-calendar form-control-feedback" aria-hidden="true"></span>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-1">
+
+                        </div>
+                        <div class="col-xs-12 col-sm-4">
+                            <label class="sr-only" for="time">Date</label>
+                            <div class="form-group has-feedback">
+                                <input class="form-control" name="time" id="time" placeholder="Time">
+                                <span class="glyphicon glyphicon-time form-control-feedback" aria-hidden="true"></span>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-1">
+
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10 col-sm-offset-2">
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                    </div>
+                    <div class="alert alert-warning alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <strong>Warning!</strong> Please <a href="#phone" class="alert-link">Call</a> us to reserve for more than six guests.
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
@@ -194,7 +270,7 @@
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
-		              <i class="fa fa-phone"></i> +852 1234 5678<br>
+		              <i id="phone" class="fa fa-phone"></i> +852 1234 5678<br>
                       <i class="fa fa-fax"></i> +852 8765 4321<br>
                       <i class="fa fa-envelope"></i> <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
