Shifted login to the right

--- a/course2/week1/examples/conFusion/index.html
+++ b/course2/week1/examples/conFusion/index.html
@@ -24,7 +24,7 @@
         /* Prevent navbar from overlapping the body when navbar extends to two rows */
         @media (min-width: 768px) and (max-width: 1199px) {
             body {
-                padding: 150px 0 0 0;
+                padding: 100px 0 0 0;
             }
         }
 
@@ -69,8 +69,10 @@
                         </ul>
                     </li>
                     <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <form class="navbar-form navbar-left" role="form">
+                        <form class="navbar-form navbar-right" role="form">
                             <div class="form-group">
                                 <input type="text" name="email" class="form-control" placeholder="Email">
                                 <input type="text" name="password" class="form-control" placeholder="Password">
