--- a/course2/week1/examples/conFusion/index.html
+++ b/course2/week1/examples/conFusion/index.html
@@ -74,8 +74,8 @@
                     <li>
                         <form class="navbar-form navbar-right" role="form">
                             <div class="form-group">
-                                <input type="text" name="email" class="form-control" placeholder="Email">
-                                <input type="text" name="password" class="form-control" placeholder="Password">
+                                <input type="email" name="email" class="form-control" placeholder="Email">
+                                <input type="password" name="password" class="form-control" placeholder="Password">
                             </div>
                             <div class="form-group">
                                 <input id="remember-me" type="checkbox" class="form-control" name="rememberme" value="">
@@ -234,7 +234,7 @@
                         <div class="col-xs-12 col-sm-4">
                             <label class="sr-only" for="date">Date</label>
                             <div class="form-group has-feedback">
-                                <input class="form-control" name="date" id="date" placeholder="Date">
+                                <input type="date" class="form-control" name="date" id="date" placeholder="Date">
                                 <span class="glyphicon glyphicon-calendar form-control-feedback" aria-hidden="true"></span>
                             </div>
                         </div>
@@ -244,7 +244,7 @@
                         <div class="col-xs-12 col-sm-4">
                             <label class="sr-only" for="time">Date</label>
                             <div class="form-group has-feedback">
-                                <input class="form-control" name="time" id="time" placeholder="Time">
+                                <input type="time" class="form-control" name="time" id="time" placeholder="Time">
                                 <span class="glyphicon glyphicon-time form-control-feedback" aria-hidden="true"></span>
                             </div>
                         </div>
@@ -259,7 +259,7 @@
                     </div>
                     <div class="alert alert-warning alert-dismissible" role="alert">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <strong>Warning!</strong> Please <a href="#phone" class="alert-link">Call</a> us to reserve for more than six guests.
+                        <strong>Warning!</strong> Please <a href="tel:+85212345678" class="alert-link">Call</a> us to reserve for more than six guests.
                     </div>
                 </form>
             </div>
