Added login to all pages

--- a/course2/week1/examples/conFusion/contactus.html
+++ b/course2/week1/examples/conFusion/contactus.html
@@ -59,6 +59,21 @@
                     </li>
                     <li class="active"><a href="#"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <form class="navbar-form navbar-right" role="form">
+                            <div class="form-group">
+                                <input type="email" name="email" class="form-control" placeholder="Email">
+                                <input type="password" name="password" class="form-control" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <input id="remember-me" type="checkbox" class="form-control" name="rememberme" value="">
+                                <label for="remember-me">Remember me</label>
+                            </div>
+                            <button type="submit" class="btn btn-info">Sign In</button>
+                        </form>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
