--- a/course2/week1/examples/conFusion/aboutus.html
+++ b/course2/week1/examples/conFusion/aboutus.html
@@ -59,22 +59,42 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <form class="navbar-form navbar-right" role="form">
-                            <div class="form-group">
-                                <input type="email" name="email" class="form-control" placeholder="Email">
-                                <input type="password" name="password" class="form-control" placeholder="Password">
-                            </div>
-                            <div class="form-group">
-                                <input id="remember-me" type="checkbox" class="form-control" name="rememberme" value="">
-                                <label for="remember-me">Remember me</label>
-                            </div>
-                            <button type="submit" class="btn btn-info">Sign In</button>
-                        </form>
+                        <a data-toggle="modal" data-target="#loginModal" href="#">
+                            <span class="glyphicon glyphicon-log-in"></span> Login
+                        </a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Login </h4>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline" role="form">
+                        <div class="form-group">
+                            <input type="email" name="email" class="form-control" placeholder="Email">
+                            <input type="password" name="password" class="form-control" placeholder="Password">
+                        </div>
+                        <div class="form-group">
+                            <input id="remember-me" type="checkbox" class="form-control" name="rememberme" value="">
+                            <label for="remember-me" style="color:white">Remember me</label>
+                        </div>
+                        <button type="submit" class="btn btn-info">Sign In</button>
+                        <button type="button" class="btn btn-default btn-sm"
+                                data-dismiss="modal">Cancel</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
 
         <!-- Main component for a primary marketing message or call to action -->
