--- a/course2/week1/examples/conFusion/index.html
+++ b/course2/week1/examples/conFusion/index.html
@@ -18,21 +18,6 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>
-        /* As we cannot edit the CSS files in the assessment some styles are given here*/
-
-        /* Prevent navbar from overlapping the body when navbar extends to two rows */
-        @media (min-width: 768px) and (max-width: 1199px) {
-            body {
-                padding: 100px 0 0 0;
-            }
-        }
-
-        /* Ensure labels in the navbar are white */
-        .navbar-inverse .navbar-nav .navbar-form label {
-            color: #fff;
-        }
-    </style>
 </head>
 
 <body>
@@ -72,22 +57,41 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <form class="navbar-form navbar-right" role="form">
-                            <div class="form-group">
-                                <input type="email" name="email" class="form-control" placeholder="Email">
-                                <input type="password" name="password" class="form-control" placeholder="Password">
-                            </div>
-                            <div class="form-group">
-                                <input id="remember-me" type="checkbox" class="form-control" name="rememberme" value="">
-                                <label for="remember-me">Remember me</label>
-                            </div>
-                            <button type="submit" class="btn btn-info">Sign In</button>
-                        </form>
+                        <a data-toggle="modal" data-target="#loginModal" href="#">
+                            <span class="glyphicon glyphicon-log-in"></span> Login
+                        </a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Login </h4>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline" role="form">
+                        <div class="form-group">
+                            <input type="email" name="email" class="form-control" placeholder="Email">
+                            <input type="password" name="password" class="form-control" placeholder="Password">
+                        </div>
+                        <div class="form-group">
+                            <input id="remember-me" type="checkbox" class="form-control" name="rememberme" value="">
+                            <label for="remember-me" style="color:white">Remember me</label>
+                        </div>
+                        <button type="submit" class="btn btn-info">Sign In</button>
+                        <button type="button" class="btn btn-default btn-sm"
+                                data-dismiss="modal">Cancel</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <header class="jumbotron">
 
@@ -106,7 +110,9 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
-                    <a class="btn btn-warning btn-block" href="#reserve-table">Reserve Table</a>
+                    <a type="button" class="btn btn-warning btn-block"
+                       data-toggle="tooltip" title="Or Call us at +852 12345678"
+                       data-placement="bottom" href="#reserveform">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -195,7 +201,7 @@
             </div>
         </div>
 
-        <div id="reserve-table" class="row row-content">
+        <div id="reserveform" class="row row-content">
             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
                 <h3>Reserve a Table</h3>
@@ -309,6 +315,11 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
