--- a/course2/week1/examples/conFusion/contactus.html
+++ b/course2/week1/examples/conFusion/contactus.html
@@ -86,7 +86,7 @@
                         </div>
                         <div class="form-group">
                             <input id="remember-me" type="checkbox" class="form-control" name="rememberme" value="">
-                            <label for="remember-me" style="color:white">Remember me</label>
+                            <label for="remember-me">Remember me</label>
                         </div>
                         <button type="submit" class="btn btn-info">Sign In</button>
                         <button type="button" class="btn btn-default btn-sm"
