Finished assessment course 2, week 3

--- a/course2/week1/examples/conFusion/index.html
+++ b/course2/week1/examples/conFusion/index.html
@@ -93,6 +93,101 @@
         </div>
     </div>
 
+    <div id="reservationModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h3 class="modal-title">Reserve a Table </h3>
+                </div>
+                <div class="modal-body">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <div class="col-xs-12 col-sm-2">
+                                <label for="num-guests">Number of Guests</label>
+                            </div>
+                            <div class="col-xs-12 col-sm-10">
+                                <label class="radio-inline">
+                                    <input type="radio" id="num-guests" name="num-guests" value="1"> 1
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="num-guests" value="2"> 2
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="num-guests" value="3"> 3
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="num-guests" value="4"> 4
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="num-guests" value="5"> 5
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="num-guests" value="6"> 6
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-xs-12 col-sm-2">
+                                <label for="non-smoking">Section</label>
+                            </div>
+                            <div class="col-xs-12 col-sm-10 btn-group" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                    <input type="radio" name="section" autocomplete="off" id="non-smoking" value="non-smoking" checked>Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <input type="radio" name="section" autocomplete="off" value="smoking">Smoking
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-xs-12 col-sm-2">
+                                <label>Date and Time</label>
+                            </div>
+                            <div class="col-xs-12 col-sm-4">
+                                <label class="sr-only" for="date">Date</label>
+                                <div class="form-group has-feedback">
+                                    <!-- Either you choose type="date" without the "Date" placeholder being shown in Chrome
+                                    or you choose type="text" with the placeholder being displayed but without date browser support.
+                                    I chose type="date" here. -->
+                                    <input type="date" class="form-control" name="date" id="date" placeholder="Date">
+                                    <span class="glyphicon glyphicon-calendar form-control-feedback" aria-hidden="true"></span>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-1">
+
+                            </div>
+                            <div class="col-xs-12 col-sm-4">
+                                <label class="sr-only" for="time">Date</label>
+                                <div class="form-group has-feedback">
+                                    <!-- Either you choose type="time" without the "Time" placeholder being shown in Chrome
+                                    or you choose type="text" with the placeholder being displayed but without time browser support.
+                                    I chose type="time" here. -->
+                                    <input type="time" class="form-control" name="time" id="time" placeholder="Time">
+                                    <span class="glyphicon glyphicon-time form-control-feedback" aria-hidden="true"></span>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-1">
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-10 col-sm-offset-2">
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            </div>
+                        </div>
+                        <div class="alert alert-warning alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <strong>Warning!</strong> Please <a href="tel:+85212345678" class="alert-link">Call</a> us to reserve for more than six guests.
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
 
         <!-- Main component for a primary marketing message or call to action -->
@@ -110,9 +205,11 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
+
+                    <!-- Only the bootstrap tooltip has been removed. The default "title" tooltip of the browser has been kept. -->
                     <a type="button" class="btn btn-warning btn-block"
                        title="Or Call us at +852 12345678"
-                       data-toggle="modal" data-target="#reservemodal" href="#">Reserve Table</a>
+                       data-toggle="modal" data-target="#reservationModal" href="#">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -262,89 +359,6 @@
                 </div>
             </div>
         </div>
-
-        <div id="reservemodal" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h3 class="modal-title">Reserve a Table </h3>
-                    </div>
-                    <div class="modal-body">
-                        <!-- TODO: container und row hier? -->
-                        <div class="container-fluid">
-                            <div class="row">
-
-                                <form class="form-horizontal" role="form">
-                                    <div class="form-group">
-                                        <div class="col-xs-12 col-sm-2">
-                                            <label for="num-guests">Number of Guests</label>
-                                        </div>
-                                        <div class="col-xs-12 col-sm-10">
-                                            <label class="radio-inline">
-                                                <input type="radio" id="num-guests" name="num-guests" value="1"> 1
-                                            </label>
-                                            <label class="radio-inline">
-                                                <input type="radio" name="num-guests" value="2"> 2
-                                            </label>
-                                            <label class="radio-inline">
-                                                <input type="radio" name="num-guests" value="3"> 3
-                                            </label>
-                                            <label class="radio-inline">
-                                                <input type="radio" name="num-guests" value="4"> 4
-                                            </label>
-                                            <label class="radio-inline">
-                                                <input type="radio" name="num-guests" value="5"> 5
-                                            </label>
-                                            <label class="radio-inline">
-                                                <input type="radio" name="num-guests" value="6"> 6
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="col-xs-12 col-sm-2">
-                                            <label>Date and Time</label>
-                                        </div>
-                                        <div class="col-xs-12 col-sm-4">
-                                            <label class="sr-only" for="date">Date</label>
-                                            <div class="form-group has-feedback">
-                                                <input type="date" class="form-control" name="date" id="date" placeholder="Date">
-                                                <span class="glyphicon glyphicon-calendar form-control-feedback" aria-hidden="true"></span>
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-12 col-sm-1">
-
-                                        </div>
-                                        <div class="col-xs-12 col-sm-4">
-                                            <label class="sr-only" for="time">Date</label>
-                                            <div class="form-group has-feedback">
-                                                <input type="time" class="form-control" name="time" id="time" placeholder="Time">
-                                                <span class="glyphicon glyphicon-time form-control-feedback" aria-hidden="true"></span>
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-12 col-sm-1">
-
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="col-sm-10 col-sm-offset-2">
-                                            <button type="submit" class="btn btn-primary">Reserve</button>
-                                        </div>
-                                    </div>
-                                    <div class="alert alert-warning alert-dismissible" role="alert">
-                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                        <strong>Warning!</strong> Please <a href="tel:+85212345678" class="alert-link">Call</a> us to reserve for more than six guests.
-                                    </div>
-                                </form>
-
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
 
     <footer class="row-footer">
@@ -390,11 +404,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
 
 </html>
